--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DISCORD_TOKEN=
-MONGO_TOKEN=
+DISCORD_TOKEN= MTA3OTYzODY3MDk3MTI0MDQ4OQ.GZ-MP-.NpSd0j1PvRmaxCEtrVW2Nx0XBVgmaMdoMeeDUE
+MONGO_TOKEN= 
 GIPHY_TOKEN=
 WEBHOOK_ID=
 WEBHOOK_TOKEN=
